Added swagger updates to try to get the new /auth and /users routes to work in the swagger docs.
